Fix animated chef sprite visibility

--- a/static/css/hero_chef.css
+++ b/static/css/hero_chef.css
@@ -22,6 +22,7 @@
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: 400% 100%;
+  display: block;
   filter: drop-shadow(0 5px 5px rgb(12 20 15 / 0.3));
   height: 100%;
   transform: scaleX(var(--chef-facing, 1));
